<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a21657540.interfazyep_tab.Login"
    android:background="@drawable/background_fill">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/background"
        style="@style/MyImageView" />

    <TextView
        android:id="@+id/idTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/txtTITULO"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="55sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/idSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/idTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/txtSUBTITTLE"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idDont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:clickable="true"
        android:onClick="next"
        android:text="@string/txtNOcuenta"
        android:textColor="@android:color/background_light" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:alpha="1"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="15dp">


        <EditText
            android:id="@+id/idUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/idPasswd"
            android:ems="10"
            android:hint="@string/textoUser"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/idPasswd3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/idBTN"
            android:ems="10"
            android:hint="@string/textoPsswd"
            android:inputType="textPassword" />

    </LinearLayout>


    <Button
        android:id="@+id/idBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idDont"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginBottom="84dp"
        android:background="@drawable/button"
        android:text="@string/txtBtn" />

</RelativeLayout>
