<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idGlobal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context="com.example.a21657540.interfazyep_tab.Splash">

    <ImageView
        android:id="@+id/idAguacate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        app:srcCompat="@drawable/aguacate"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/idTittleSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        android:text="@string/txtSplash"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/idTittleSplash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/idTittleSplash"
        android:layout_alignBottom="@+id/idTittleSplash"
        android:layout_toEndOf="@+id/idTittleSplash"
        android:layout_toRightOf="@+id/idTittleSplash"
        android:gravity="center_vertical"
        android:text="@string/txtSplash1"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/idWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/txtWelcome"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />
</RelativeLayout>
